--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -1,22 +1,35 @@
 <html>
 	<head>
 		<title>GTD Tool</title>		
+		<link rel="stylesheet" href="css/styles.css" />
 		<script type="text/javascript" src="js/base64.js"></script>
 		<script type="text/javascript" src="js/prototype.js"></script>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/github_api.js"></script>
-		<script type="text/javascript" src="js/application.js"></script>		
+		<script type="text/javascript" src="js/github_sync.js"></script>
+		<script type="text/javascript" src="js/application.js"></script>
+		<script type="text/javascript" src="js/viewer.js"></script>		
 		<script type="text/javascript" src="js/main.js"></script>
-	
 	</head>
-	<body style="background-color:#1c1c1c;margin:30px;color:#fff;">
-		<div id="container"></div>
-		<h1>Prototyp GitHubAPI</h1>
-		<button class="myIssues">Moje issues</button>
-		<button class="loadRepos">load</button>		
-		<h2>Projekty</h2>
-		<ul id="projects"></ul>		
-		<h2>Issues vybraneho projektu</h2>
-		<ul id="issues"></ul>		
+	<body>
+		<div id="container">
+			<div id="sidebar">
+				<button id="setAuth">set auth</button>
+				<br />
+				<h2>Projekty</h2>
+				<ul id="projects"></ul>						
+			</div>
+			
+			<div id="main">
+				<h1>Prototyp GitHubAPI</h1>
+				<button id="reload">refresh</button>
+				<button id="loadRepos">load</button>
+				<hr />
+				<h2>Issues vybraneho projektu</h2>
+				<ul id="issues"></ul>		
+			</div>
+			<span class="clear"></span>
+		</div>
+		<script type="text/javascript" src="js/events.js"></script>								
 	</body>
 </html>
