Dokonceni synchronizace issues, pridani nove issue, uzavreni issue

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -24,7 +24,8 @@
 				<h1>Prototyp GitHubAPI</h1>
 				<button id="reload">refresh</button>
 				<button id="loadRepos">load</button>
-				<hr />
+				<button id="saveNewIssue">New issue</button>
+				<hr />				
 				<h2>Issues vybraneho projektu</h2>
 				<ul id="issues"></ul>		
 			</div>
