--- a/prototypes/issue.html
+++ b/prototypes/issue.html
@@ -11,7 +11,7 @@
 			<ul class="items">
 				<li>INBOX</li>
 			</ul>
-   		<button class="cupid-green">Create new project</button>
+   		<button class="cupid-green" onclick="window.location.href = 'project.html';">Create new project</button>
 			<span class="divider"></span>
 			<h3>Projects</h3>
 			<ul class="items">
@@ -34,7 +34,7 @@
 		<div id="content">
     	<div class="inner">
 				<div class="projectHeader">
-					<h2 class="github" title="GitHub project">Opened project name <img src="src/edit.png" alt="Edit project" title="Edit project" height="21" width="60" class="editProject"></h2>
+					<h2 class="github" title="GitHub project">Opened project name</h2>
 				</div>
         <div class="labels">
         	<span class="label global">Work</span>
@@ -96,7 +96,7 @@
 						</tr>
 						<tr>
 							<td><button type="submit" class="cupid-green">Add / edit issue</button></td>
-							<td align="right"><button class="minimal">Storno</button></td>
+							<td align="right"><button class="minimal" type="button" onclick="window.location.href = 'index.html';">Storno</button></td>
 							<td>&nbsp;</td>
 						</tr>
           </table>
