Dokonceni API GitHub #17

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -5,7 +5,13 @@
 		<script type="text/javascript" src="js/base64.js"></script>
 		<script type="text/javascript" src="js/prototype.js"></script>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/github_api.js"></script>
+		<script type="text/javascript" src="js/objects.js"></script>
+		<script type="text/javascript" src="js/abstractClasses.js"></script>
+		<script type="text/javascript" src="js/rest_client.js"></script>
+		<script type="text/javascript" src="js/ajax_client.js"></script>
+		<script type="text/javascript" src="js/gcode_api.js"></script>
+		<script type="text/javascript" src="js/assembla_api.js"></script>
+		<script type="text/javascript" src="js/github_api.js"></script>			
 		<script type="text/javascript" src="js/github_sync.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/viewer.js"></script>		
@@ -29,7 +35,7 @@
 				<h2>Issues vybraneho projektu</h2>
 				<ul id="issues"></ul>		
 			</div>
-			<span class="clear"></span>
+			<span class="clear"> </span>
 		</div>
 		<script type="text/javascript" src="js/events.js"></script>								
 	</body>
