Rozpracovani DB vrstvy a vieweru #21

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -12,9 +12,9 @@
 		<script type="text/javascript" src="js/gcode_api.js"></script>
 		<script type="text/javascript" src="js/assembla_api.js"></script>
 		<script type="text/javascript" src="js/github_api.js"></script>			
-		<script type="text/javascript" src="js/github_sync.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
-		<script type="text/javascript" src="js/viewer.js"></script>		
+		<script type="text/javascript" src="js/sync.js"></script>
+		<script type="text/javascript" src="js/viewer.js"></script>						
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
