Zapracovani designu do aplikace #24

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -38,11 +38,13 @@
 			<button class="button-big">Archive</button>
 			<button class="button-big">Trash</button>
 			<button class="button-big">Settings</button>
+			<br>
 			<button class="button-big" id="setAuth">set auth</button>
 		</div>
 		
 		<div id="content">
 	    	<div class="inner">
+	    		<div class="projectButtons"></div>
 	    		<div class="projectHeader">
 					<h2>Inbox</h2>
 				</div>
@@ -51,7 +53,7 @@
 				<span class="divider"> </span>
 				<button class="cupid-green" id="saveNewIssue">Add new issue</button>
 				<br>
-				<ul id="issues"></ul>
+				<div id="issues"></div>
 			</div>
 		</div>		
 		<script type="text/javascript" src="js/events.js"></script>								
