--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -40,6 +40,7 @@
 			<button class="button-big">Settings</button>
 			<br>
 			<button class="button-big" id="setAuth">set auth</button>
+			<button class="button-big" id="changeConfig">configuration</button>
 		</div>
 		
 		<div id="content">
