--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -12,7 +12,8 @@
 		<script type="text/javascript" src="js/ajax_client.js"></script>
 		<script type="text/javascript" src="js/gcode_api.js"></script>
 		<script type="text/javascript" src="js/assembla_api.js"></script>
-		<script type="text/javascript" src="js/github_api.js"></script>			
+		<script type="text/javascript" src="js/github_api.js"></script>
+		<script type="text/javascript" src="js/model.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/sync.js"></script>
 		<script type="text/javascript" src="js/viewer.js"></script>						
@@ -37,10 +38,11 @@
 			<span class="divider"> </span>
 			<button class="button-big">Archive</button>
 			<button class="button-big">Trash</button>
-			<button class="button-big">Settings</button>
-			<br>
-			<button class="button-big" id="setAuth">set auth</button>
-			<button class="button-big" id="changeConfig">configuration</button>
+			<button class="button-big" id="changeConfig">Config</button>
+			<br><br>
+			<button class="button-big" id="reload">Refresh projects</button>
+			<button class="button-big" id="loadRepos">Sync projects</button>			
+			<button class="button-big" id="setAuth">Generate<br>auth</button>			
 		</div>
 		
 		<div id="content">
@@ -48,9 +50,7 @@
 	    		<div class="projectButtons"></div>
 	    		<div class="projectHeader">
 					<h2>Inbox</h2>
-				</div>
-				<button id="reload">refresh</button>
-				<button id="loadRepos">load</button>				
+				</div>							
 				<span class="divider"> </span>
 				<button class="cupid-green" id="saveNewIssue">Add new issue</button>
 				<br>
