New fnc - create project

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -24,7 +24,7 @@
 			<ul class="items">
 				<li>INBOX</li>
 			</ul>
-			<button class="cupid-green">Create new project</button>
+			<button class="cupid-green" id="saveNewProject">Create new project</button>
 			<span class="divider"> </span>
 			<h3>Projects</h3>
 			<ul class="items" id="projects">				
