Creating issues (dialog, database, Github)

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<div id="sidebar">
 			<ul class="items">
-				<li>INBOX</li>
+				<li class="selection" data-key="1">INBOX</li>
 			</ul>
 			<button class="cupid-green" id="saveNewProject">Create new project</button>
 			<span class="divider"> </span>
@@ -31,9 +31,9 @@
 			</ul>
 			<h3>Reviews</h3>
 			<ul class="items">
-				<li>Day review</li>
-				<li>Week review</li>
-				<li>Month review</li>
+				<li class="selection" data-key="2">Day review</li>
+				<li class="selection" data-key="3">Week review</li>
+				<li class="selection" data-key="4">Month review</li>
 			</ul>
 			<span class="divider"> </span>
 			<button class="button-big">Archive</button>
