Ajax loader + jQuery removed

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -50,6 +50,8 @@
 	    		<div class="projectButtons"></div>
 	    		<div class="projectHeader">
 					<h2>Inbox</h2>
+					<img src="images/ajax-loader.gif" id="loader" width="32" height="32" style="display: none;" />
+					<br />					
 				</div>							
 				<span class="divider"> </span>
 				<button class="cupid-green" id="saveNewIssue">Add new issue</button>
