--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -15,8 +15,9 @@
 		<script type="text/javascript" src="js/model.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/sync.js"></script>
+		<script type="text/javascript" src="js/handlers.js"></script>
 		<script type="text/javascript" src="js/viewer.js"></script>						
-		<script type="text/javascript" src="js/main.js"></script>		
+		<script type="text/javascript" src="js/main.js"></script>	    
 	</head>
 	<body>
 		<div id="sidebar">
@@ -44,15 +45,13 @@
 	    		<div class="projectButtons"></div>
 	    		<div class="projectHeader">
 					<h2>Inbox</h2>
-					<img src="images/ajax-loader.gif" id="loader" width="32" height="32" class="hidden" />
-					<br />					
+					<img src="images/ajax-loader.gif" id="loader" width="32" height="32" class="hidden" />									
 				</div>							
 				<span class="divider"> </span>
 				<button class="cupid-green" id="saveNewIssue">Add new issue</button>
 				<br>
 				<div id="issues"></div>
 			</div>
-		</div>		
-		<script type="text/javascript" src="js/events.js"></script>								
+		</div>									
 	</body>
 </html>
