--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -49,6 +49,7 @@
 				</div>							
 				<span class="divider"> </span>
 				<button class="cupid-green" id="saveNewIssue">Add new issue</button>
+				<button class="cupid-green" id="editProjectButton" data-key="0">Edit project</button>
 				<br>
 				<div id="issues">
 				    <p>No news</p>
