--- a/src/Resources/tests/run.html
+++ b/src/Resources/tests/run.html
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/objects.js"></script>
+<script type="text/javascript" src="../js/model.js"></script>
 <script type="text/javascript" src="../tests/jsunity-0.6.js"></script>
 <script type="text/javascript" src="../tests/TitaniumUnity.js"></script>
 <script type="text/javascript" src="../tests/modelTest.js"></script>
