--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -23,6 +23,8 @@
 		<div id="sidebar">
 			<ul class="items">
 				<li class="selection" data-key="1">INBOX</li>
+				<li class="selection" data-key="5">Today</li>
+				<li class="selection" data-key="6">Scheduled</li>
 			</ul>
 			<button class="cupid-green" id="saveNewProject">Create new project</button>
 			<span class="divider"> </span>
