--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
 		<title>GTD Tool</title>		
-		<link rel="stylesheet" href="css/typography.css" />
-		<link rel="stylesheet" href="css/screen.css" />
+		<link rel="stylesheet" href="css/typography.css" media="screen"/>
+		<link rel="stylesheet" href="css/screen.css" media="screen"/>
+		<link rel="stylesheet" href="css/print.css" media="print" />
 		<script type="text/javascript" src="js/base64.js"></script>
 		<script type="text/javascript" src="js/prototype.js"></script>		
 		<script type="text/javascript" src="js/objects.js"></script>
@@ -47,7 +48,7 @@
 	    		<div class="projectButtons"></div>
 	    		<div class="projectHeader">
 					<h2>GTD Tool</h2>
-					<img src="images/ajax-loader.gif" id="loader" width="32" height="32" class="hidden" />									
+					<img src="" id="loader" width="32" height="32" class="hidden" />									
 				</div>							
 				<span class="divider"> </span>
 				<button class="cupid-green" id="saveNewIssue">Add new issue</button>
