Areas and labels for projects + tests #27 #28

--- a/src/Resources/tests/runViewerTest.html
+++ b/src/Resources/tests/runViewerTest.html
@@ -1,9 +1,10 @@
 <script type="text/javascript" src="../js/prototype.js"></script>
 <script type="text/javascript" src="../js/objects.js"></script>
 <script type="text/javascript" src="../js/model.js"></script>
+<script type="text/javascript" src="../js/viewer.js"></script>
 <script type="text/javascript" src="../tests/jsunity-0.6.js"></script>
 <script type="text/javascript" src="../tests/TitaniumUnity.js"></script>
-<script type="text/javascript" src="../tests/modelTest.js"></script>
+<script type="text/javascript" src="../tests/viewerTest.js"></script>
 <script type="text/javascript">
-    jsUnity.run(DataTestSuite);
+    jsUnity.run(ViewerTestSuite);
 </script>
