Trash function + tests #27

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -39,8 +39,8 @@
 				<li class="selection" data-key="4">Month review</li>
 			</ul>
 			<span class="divider"> </span>
-			<button class="button-big">Archive</button>
-			<button class="button-big">Trash</button>
+			<button class="button-big selection" data-key="8">Archive</button>
+			<button class="button-big selection" data-key="9">Trash</button>
 		</div>
 		
 		<div id="content">
