Empty trash button + handler

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -41,6 +41,7 @@
 			<span class="divider"> </span>
 			<button class="button-big selection" data-key="8">Archive</button>
 			<button class="button-big selection" data-key="9">Trash</button>
+			<button class="button-big" id="trash-empty">Empty trash</button>
 		</div>
 		
 		<div id="content">
