Drag'n'drop sorting of issues #13

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -5,7 +5,8 @@
 		<link rel="stylesheet" href="css/screen.css" media="screen"/>
 		<link rel="stylesheet" href="css/print.css" media="print" />
 		<script type="text/javascript" src="js/base64.js"></script>
-		<script type="text/javascript" src="js/prototype.js"></script>		
+		<script type="text/javascript" src="js/prototype.js"></script>
+		<script type="text/javascript" src="js/scriptaculous/scriptaculous.js"></script>		
 		<script type="text/javascript" src="js/objects.js"></script>
 		<script type="text/javascript" src="js/abstractClasses.js"></script>
 		<script type="text/javascript" src="js/rest_client.js"></script>
