Better notifications (Script.aculo.us effect & CSS)

--- a/src/Resources/index.html
+++ b/src/Resources/index.html
@@ -55,6 +55,7 @@
 				    <p>No news</p>
 				</div>
 			</div>
+			<div class="notifications" id="notifications" style="display: none"></div>
 		</div>									
 	</body>
 </html>
